allowed receive multiple events in one jms message